[package]
name = "rust"
version = "0.1.0"
edition = "2021"
autotests = false
autobenches = false

[lib]
test = false
bench = false

[[test]]
name = "alog"
path = "tests/lib.rs"

#[[bench]]
#name = "corebenches"
#path = "benches/lib.rs"
#test = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rand = { version = "0.8.5", default-features = false }
rand_xorshift = { version = "0.3.0", default-features = false }

[features]
# Make panics and failed asserts immediately abort without formatting any message
panic_immediate_abort = []
# Make `RefCell` store additional debugging information, which is printed out when
# a borrow error occurs
debug_refcell = []
