
add_subdirectory(library)

add_subdirectory(removeDuplicates)

#https://leetcode-cn.com/leetbook/read/top-interview-questions-easy/x2zsx1/
add_subdirectory(maxProfit)

#https://leetcode.cn/problems/binary-search/?plan=algorithms&plan_progress=sfqjrrm
add_subdirectory(_0704)

#https://leetcode.cn/problems/first-bad-version/
add_subdirectory(_0278)

#https://leetcode.cn/problems/search-insert-position/?plan=algorithms&plan_progress=sfqjrrm
add_subdirectory(_0035)

#https://leetcode.cn/problems/squares-of-a-sorted-array/?plan=algorithms&plan_progress=sfqjrrm
add_subdirectory(_0977)

add_subdirectory(_0217)

add_subdirectory(_0053)

add_subdirectory(_0088)